--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <p class="text-muted">&copy; Ek Step Foundation 2020. All Rights Reserved.</p>
+          <p class="text-muted">&copy; EkStep Foundation, 2020 .</p>
         </div>
         <div class="col-lg-6">
             <ul class="list-inline mb-2">
