--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,77 +4,116 @@
 <head>
     <title>Crowd Sourcing Platform</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
-        type="text/css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700,900" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
 
 <body>
 
     <%- include common/header.ejs %>
-    <div class="masthead text-white text-center">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-9 mx-auto">
-                    <h1 class="mb-5">Recording Instructions</h1>
+    <div class="container-fluid pb-6">
+        <div class="row py-5">
+            <div class="col-lg-6 col-md-8 col-sm-10 offset-lg-1 offset-md-2 offset-sm-1 p-5 text-dark mt-5">
+                <h1 class="display-5 font-wt-800 site-blue">Crowd Sourcing Platform:</h1>
+                <p class="display-5 font-wt-800 site-blue">Speech Recognition</p>
+                <p class="h4 font-weight-bold lh-7 site-blue">EkStep is an enabler. Our layered modular platform allows
+                    the creation of
+                    non-linear, agile and scalable solutions .</p>
+                <p class="lead font-weight-bold lh-7 site-blue">For more Information <a class="ml-1"
+                        href="/about-us">Click
+                        Here</a>
+                </p>
+                <div class="row">
+                    <div class="col-5">
+                        <a role="button" href="#recording-instructions" class="btn btn-primary shadow-lg w-100 rounded mt-4 p-3">
+                            <i class="material-icons align-middle">play_circle_outline</i>
+                            <span class="align-middle font-weight-bold">
+                                START RECORDING
+                            </span>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-10 col-lg-8 col-xl-8 mx-auto">
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <i class="material-icons md-48">settings_voice</i>
-                            <p>Click Record to start, reading aloud only the sentence shown.</p>
 
-                        </div>
-                        <div class="col-lg-3">
+            </div>
+            <div id="header-img"
+                class="col-lg-4 col-md-8 col-sm-10 offset-lg-1 offset-md-2 offset-sm-1 bg-secondary p-5 mt-5 d-flex text-center">
 
-                            <i class="material-icons md-48">mic_off</i>
-                            <p> When done speaking, click Stop button to stop recording.</p>
-                        </div>
-                        <div class="col-lg-3">
-                            <i class="material-icons md-48">volume_up</i>
-                            <p> Listen to recorded audio using Play button.</p>
-                        </div>
-                        <div class="col-lg-3">
-                            <i class="material-icons md-48">repeat</i>
-                            <p> Re-record if not satisfied with the previous recording.</p>
-                        </div>
+                <p class="h1 align-self-center">Dummy Image Here</p>
+            </div>
+
+        </div>
+    </div>
+    <div class="container-fluid bg-light pb-6" id="recording-instructions">
+        <div class="text-center pb-5 pt-5">
+            <p class="display-5 font-wt-800 site-blue">Recording Instructions</h1>
+        </div>
+        <div class="row pb-5">
+            <div class="col-10 offset-1">
+                <div class="row">
+                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                        <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">settings_voice</i>
+                        <p class="mt-3 h6 lh-7 site-blue">Click <b>Record</b> to start recording</p>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                        <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">record_voice_over</i>
+                        <p class="mt-3 h6 lh-7 site-blue"><b>Read aloud</b> the sentences shown</p>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                        <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">mic_off</i>
+                        <p class="mt-3 h6 lh-7 site-blue">Click <b>Stop button</b> to stop recording</p>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                        <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">hearing</i>
+                        <p class="mt-3 h6 lh-7 site-blue">Listen recorded audio using <b>Play</b> button</p>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                        <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">repeat</i>
+                        <p class="mt-3 h6 lh-7 site-blue"><b>Re-record</b> if not happy with the previous recording</p>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                        <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">navigate_next</i>
+                        <p class="mt-3 h6 lh-7 site-blue">Click <b>Next</b> to upload recording</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid bg-light pt-5 pb-6 mb-5">
+    <div class="container-fluid pt-5 pb-6 mb-5">
         <div class="row justify-content-center">
-            <div class="col-lg-6 card p-5">
-                <h2 class="text-center mb-3">Speaker Details</h2>
-                <div class="form-group row">
-                    <label for="email" class="col-md-4 col-form-label">User Id</label>
-                    <div class="col-md-8">
-                        <input type="email" class="form-control" id="email" placeholder="User Id or Email">
-                    </div>
+            <div class="col-lg-4 col-md-6 col-sm-8 p-5" id="speaker-details">
+                <p class="display-5 font-wt-800 site-blue text-center">Speaker Details</h1>
+                    <!-- <p class="lead font-weight-bold lh-7 site-blue text-center">Type Something</p> -->
+
+                <div class="form-group">
+                    <label for="username" class="form-label">User Id</label>
+                        <input class="form-control" id="username" placeholder="User Id">
                 </div>
-                <div class="form-group row">
-                    <label for="gender" class="col-md-4 col-form-label">Gender</label>
-                    <div class="col-md-8">
-                        <select class="form-control" id="gender">
-                            <option>
-                                Please Select
-                            </option>
-                            <option value="Male">Male</option>
-                            <option value="Female">Female</option>
-                            <option value="Other">Other</option>
-                        </select>
-                    </div>
+                <div class="form-group pt-3">
+                    <label for="gender" class="form-label">Gender</label>
+                    <div class="d-flex justify-content-around">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="gender" id="male-check" value="male">
+                            <label class="form-check-label" for="male-check">Male</label>
+                          </div>
+                          <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="gender" id="female-check" value="female">
+                            <label class="form-check-label" for="female-check">Female</label>
+                          </div>
+                          <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="gender" id="other-check" value="others">
+                            <label class="form-check-label" for="other-check">Others</label>
+                          </div>
+                    </div> 
                 </div>
-                <div class="form-group row">
-                    <label for="age" class="col-md-4 col-form-label">Age</label>
-                    <div class="col-md-8">
+                <div class="row pt-3">
+                    <div class="form-group col-md-4 col-sm-12">
+                        <label for="age" class="form-label">Age Group</label>
                         <select class="form-control" id="age">
                             <option>
                                 Please Select
@@ -89,10 +128,8 @@
                             <option value="> 75">&gt; 75 (Senior)</option>
                         </select>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label for="state" class="col-md-4 col-form-label">State</label>
-                    <div class="col-md-8">
+                    <div class="form-group col-md-8 col-sm-12">
+                        <label for="state" class="form-label">State</label>
                         <select class="form-control" id="state">
                             <option>
                                 Please Select
@@ -135,12 +172,19 @@
                         </select>
                     </div>
                 </div>
+                <!-- <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                    <label class="form-check-label" for="defaultCheck1">
+                      I have read and agree to the <a href="/terms-and-conditons">Terms and Condtions</a>
+                    </label>
+                  </div> -->
                 <div class="row justify-content-center">
-                    <div class="col-md-3">
-                        <button type="button" class="btn btn-primary" id="start-record">
-                            <i class="material-icons md-48 align-middle">play_circle_outline</i>
-                            <span class="align-middle">
-                                Start Recording
+                    <div class="col-sm-6">
+                        <button type="button" id="start-record" class="btn btn-primary shadow-lg w-100 rounded mt-4 p-3"
+                            id="start-record">
+                            <i class="material-icons align-middle">play_circle_outline</i>
+                            <span class="align-middle font-weight-bold">
+                                START RECORDING
                             </span>
                         </button>
                     </div>
@@ -150,14 +194,14 @@
     </div>
 
     <%- include common/footer.ejs %>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
 </body>
