--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,11 +5,14 @@
     <title>Crowd Sourcing Platform</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700,900" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
+        <!--TO DO :  Lazy load this -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"> -->
+    
     <link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
 
@@ -19,20 +22,20 @@
     <div class="container-fluid pb-6">
         <div class="row py-5">
             <div class="col-lg-6 col-md-8 col-sm-10 offset-lg-1 offset-md-2 offset-sm-1 p-5 text-dark mt-5">
-                <h1 class="display-5 font-wt-800 site-blue">Crowd Sourcing Platform:</h1>
-                <p class="display-5 font-wt-800 site-blue">Speech Recognition</p>
-                <p class="h4 font-weight-bold lh-7 site-blue">EkStep is an enabler. Our layered modular platform allows
+                <h1 class="display-5 font-wt-900 site-blue">Crowd Sourcing Platform:</h1>
+                <p class="display-5 font-wt-900 site-blue">Speech Recognition</p>
+                <p class="h4 lh-7 site-blue">EkStep is an enabler. Our layered modular platform allows
                     the creation of
                     non-linear, agile and scalable solutions .</p>
-                <p class="lead font-weight-bold lh-7 site-blue">For more Information <a class="ml-1"
+                <p class="lead lh-7 site-blue">For more Information <a class="ml-1"
                         href="/about-us">Click
                         Here</a>
                 </p>
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-8 col-sm-6 col-lg-5">
                         <a role="button" href="#recording-instructions" class="btn btn-primary shadow-lg w-100 rounded mt-4 p-3">
                             <i class="material-icons align-middle">play_circle_outline</i>
-                            <span class="align-middle font-weight-bold">
+                            <span class="align-middle">
                                 START RECORDING
                             </span>
                         </a>
@@ -50,32 +53,32 @@
     </div>
     <div class="container-fluid bg-light pb-6" id="recording-instructions">
         <div class="text-center pb-5 pt-5">
-            <p class="display-5 font-wt-800 site-blue">Recording Instructions</h1>
+            <p class="display-5 font-wt-900 site-blue">Recording Instructions</h1>
         </div>
         <div class="row pb-5">
             <div class="col-10 offset-1">
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                    <div class="col-lg-2 col-md-4 col-6 mb-3 text-center">
                         <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">settings_voice</i>
                         <p class="mt-3 h6 lh-7 site-blue">Click <b>Record</b> to start recording</p>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                    <div class="col-lg-2 col-md-4 col-6 mb-3 text-center">
                         <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">record_voice_over</i>
                         <p class="mt-3 h6 lh-7 site-blue"><b>Read aloud</b> the sentences shown</p>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                    <div class="col-lg-2 col-md-4 col-6 mb-3 text-center">
                         <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">mic_off</i>
                         <p class="mt-3 h6 lh-7 site-blue">Click <b>Stop button</b> to stop recording</p>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                    <div class="col-lg-2 col-md-4 col-6 mb-3 text-center">
                         <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">hearing</i>
                         <p class="mt-3 h6 lh-7 site-blue">Listen recorded audio using <b>Play</b> button</p>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                    <div class="col-lg-2 col-md-4 col-6 mb-3 text-center">
                         <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">repeat</i>
                         <p class="mt-3 h6 lh-7 site-blue"><b>Re-record</b> if not happy with the previous recording</p>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-3 text-center">
+                    <div class="col-lg-2 col-md-4 col-6 mb-3 text-center">
                         <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">navigate_next</i>
                         <p class="mt-3 h6 lh-7 site-blue">Click <b>Next</b> to upload recording</p>
                     </div>
@@ -87,8 +90,8 @@
     <div class="container-fluid pt-5 pb-6 mb-5">
         <div class="row justify-content-center">
             <div class="col-lg-4 col-md-6 col-sm-8 p-5" id="speaker-details">
-                <p class="display-5 font-wt-800 site-blue text-center">Speaker Details</h1>
-                    <!-- <p class="lead font-weight-bold lh-7 site-blue text-center">Type Something</p> -->
+                <p class="display-5 font-wt-900 site-blue text-center">Speaker Details</h1>
+                    <!-- <p class="lead lh-7 site-blue text-center">Type Something</p> -->
 
                 <div class="form-group">
                     <label for="username" class="form-label">User Id</label>
@@ -99,15 +102,15 @@
                     <div class="d-flex justify-content-around">
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="gender" id="male-check" value="male">
-                            <label class="form-check-label" for="male-check">Male</label>
+                            <label class="form-check-label p-2" for="male-check">Male</label>
                           </div>
                           <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="gender" id="female-check" value="female">
-                            <label class="form-check-label" for="female-check">Female</label>
+                            <label class="form-check-label p-2" for="female-check">Female</label>
                           </div>
                           <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="gender" id="other-check" value="others">
-                            <label class="form-check-label" for="other-check">Others</label>
+                            <label class="form-check-label p-2" for="other-check">Others</label>
                           </div>
                     </div> 
                 </div>
@@ -115,9 +118,7 @@
                     <div class="form-group col-md-4 col-sm-12">
                         <label for="age" class="form-label">Age Group</label>
                         <select class="form-control" id="age">
-                            <option>
-                                Please Select
-                            </option>
+                            <option value="">Please Select</option>
                             <option value="13 - 17">13 - 17 (Youth)</option>
                             <option value="18 - 29">18 - 29 (Adult)</option>
                             <option value="30 - 39">30 - 39 (Adult)</option>
@@ -131,8 +132,7 @@
                     <div class="form-group col-md-8 col-sm-12">
                         <label for="state" class="form-label">State</label>
                         <select class="form-control" id="state">
-                            <option>
-                                Please Select
+                            <option value="">Please Select</option>
                             <option value="Andhra Pradesh">Andhra Pradesh</option>
                             <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
                             <option value="Arunachal Pradesh">Arunachal Pradesh</option>
@@ -179,11 +179,11 @@
                     </label>
                   </div> -->
                 <div class="row justify-content-center">
-                    <div class="col-sm-6">
+                    <div class="col-8 col-sm-6 col-lg-6">
                         <button type="button" id="start-record" class="btn btn-primary shadow-lg w-100 rounded mt-4 p-3"
                             id="start-record">
                             <i class="material-icons align-middle">play_circle_outline</i>
-                            <span class="align-middle font-weight-bold">
+                            <span class="align-middle">
                                 START RECORDING
                             </span>
                         </button>
@@ -197,13 +197,16 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
+
+
+        <!-- Do we really need popper ? -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
+    <script src="js/home.js"></script>
 </body>
 
 </html>
