--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -5,11 +5,11 @@
     <title>Crowd Sourcing Platform</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700,900" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
     <link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
 
@@ -21,17 +21,17 @@
             <div class="col-sm-10 text-center">
                 <div class="jumbotron">
                     <div class="row justify-content-center">
-                        <h1 class="display-5 font-wt-800 site-blue">Thanks for contributing:</h1>
+                        <h1 class="display-5 font-wt-900 site-blue">Thanks for contributing:</h1>
                     </div>
                     <div class="row justify-content-center">
-                        <p class="h4 font-weight-bold lh-7 site-blue">EkStep is an enabler. Our layered modular platform allows
+                        <p class="h4 lh-7 site-blue">EkStep is an enabler. Our layered modular platform allows
                             the creation of
                             non-linear, agile and scalable solutions .</p>
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-4">
-                            <a role="button" href="/record" class="btn btn-primary w-100 rounded mt-4 p-3">
-                                <span class="align-middle font-weight-bold">
+                            <a role="button" href="/record" class="btn btn-primary shadow w-100 rounded mt-4 p-3">
+                                <span class="align-middle">
                                     CONTRIBUTE MORE
                                 </span>
                             </a>
@@ -40,22 +40,17 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-4">
-                            <a role="button" href="/" class="btn btn-outline-primary shadow-lg w-100 rounded mt-4 p-3">
-                                <span class="align-middle font-weight-bold">
+                            <a role="button" href="/" class="btn btn-outline-primary shadow w-100 rounded mt-4 p-3">
+                                <span class="align-middle">
                                     Done for now
                                 </span>
                             </a>
                         </div>
-                      
                     </div>
-                    
                   </div>
-
             </div>
         </div>
-      
     </div>
-
     <%- include common/footer.ejs %>
 </body>
 
