--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
-    <a class="h1 font-weight-bold text-dark" href="/"><u>Ek</u><sub> Step</sub> </a>
+    <a class="h1 text-dark" href="/"><u>Ek</u><sub> <u>Step</u></sub> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item p-2">
-                <a href="/how-it-works" class="nav-link text-dark font-weight-bold">How it works</a>
+                <a href="/how-it-works" class="nav-link text-dark">How it works</a>
             </li>
             <li class="nav-item p-2">
-                <a href="/about-us" class="nav-link text-dark font-weight-bold">About Us</a>
+                <a href="/about-us" class="nav-link text-dark">About Us</a>
             </li>
             <li class="nav-item p-2">
-                <a href="/contact-us" class="nav-link text-dark font-weight-bold">Contact Us</a>
+                <a href="/contact-us" class="nav-link text-dark">Contact Us</a>
             </li>
         </ul>
     </div>
