--- a/views/record.ejs
+++ b/views/record.ejs
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="css/notyf.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700,800" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,37 +18,37 @@
     <%- include common/header.ejs %>
     <div id="loader" class="overlay__content"><span class="spinner"></span></div>
     <div id="page-content" class="d-none">
-        <div class="container-fluid pt-5 pb-6 mb-5 mt-5">
+        <div class="container-fluid pt-5 pb-6 mb-5">
 
             <div class="row justify-content-center my-5">
                 <div class="col-md-8 col-sm-10 text-center">
-                    <label class="animated display-5" id="sentenceLbl"></label>
+                    <label class="display-5 sans-serif" id="sentenceLbl"></label>
                 </div>
             </div>
-            <div class="row justify-content-center mt-5">
-                <div class="col-lg-5">
+            <div class="row mt-5">
+                <div class="col-sm-8 offset-sm-2">
                     <div class="progress mt-1">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width: 0.5%"></div>
                     </div>
                 </div>
-                <div class="col-lg-1">
+                <div class="col-sm-2">
                     <span class="" id="currentSentenceLbl"></span>
                     <span class="">/</span>
                     <span class="" id="totalSentencesLbl"></span>
                 </div>
             </div>
             <div class="row justify-content-center ">
-                <div class="col-6 text-muted" id="get-started">
+                <div class="col-sm-8 text-muted" id="get-started">
                     Let's get started!
                 </div>
             </div>
-            <div class="row justify-content-center my-5">
-                <div class="col-2">
+            <div class="row justify-content-center mt-5">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <button type="button" class=" btn btn-primary shadow-lg w-100 rounded mt-4 p-3"
                         id="startRecord">
                         <i class="material-icons align-middle mr-2">record_voice_over</i>
-                        <span class="align-middle font-weight-bold">
+                        <span class="align-middle">
                             START RECORDING
                         </span>
                     </button>
@@ -67,33 +67,33 @@
                 </div>
             </div>
             <div class="row justify-content-center mt-5">
-                <div class="col-2">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <button type="button" id="stopRecord" class="d-none btn btn-primary shadow-lg w-100 rounded mt-4 p-3">
                         <i class="material-icons align-middle mr-2">voice_over_off</i>
-                        <span class="align-middle font-weight-bold">
+                        <span class="align-middle">
                             STOP RECORDING
                         </span>
                     </button>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-lg-8 col-md-10 text-center">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-12 text-center">
                     <audio class="d-none" id="player" controls tabindex="-1"></audio>
                 </div>
             </div>
             <div class="row justify-content-center mt-5">
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                     <button type="button" id="reRecord" class="d-none btn btn-outline-primary w-100 rounded mt-4 p-3">
                         <i class="material-icons align-middle mr-2">repeat</i>
-                        <span class="align-middle font-weight-bold">
+                        <span class="align-middle">
                             RE_RECORD
                         </span>
                     </button>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                     <button type="button" id="nextBtn" class="d-none btn btn-primary shadow-lg w-100 rounded mt-4 p-3">
                         <i class="material-icons align-middle mr-2">navigate_next</i>
-                        <span class="align-middle font-weight-bold">
+                        <span class="align-middle">
                             NEXT
                         </span>
                     </button>
