<Faizan>: Added Gulp, fixed responsiveness issues

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <title>Crowd Sourcing Platform</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -24,18 +24,15 @@
             <div class="col-lg-6 col-md-8 col-sm-10 offset-lg-1 offset-md-2 offset-sm-1 p-5 text-dark mt-5">
                 <h1 class="display-5 font-wt-900 site-blue">Crowd Sourcing Platform:</h1>
                 <p class="display-5 font-wt-900 site-blue">Speech Recognition</p>
-                <p class="h4 lh-7 site-blue">EkStep is an enabler. Our layered modular platform allows
+                <p class="h4 font-weight-normal lh-7 site-blue">EkStep is an enabler. Our layered modular platform allows
                     the creation of
-                    non-linear, agile and scalable solutions .</p>
-                <p class="lead lh-7 site-blue">For more Information <a class="ml-1"
-                        href="/about-us">Click
-                        Here</a>
-                </p>
+                    non-linear, agile and scalable solutions.<a class="ml-1"
+                    href="/about-us"> See More</a></p>
                 <div class="row">
                     <div class="col-8 col-sm-6 col-lg-5">
                         <a role="button" href="#recording-instructions" class="btn btn-primary shadow-lg w-100 rounded mt-4 p-3">
                             <i class="material-icons align-middle">play_circle_outline</i>
-                            <span class="align-middle">
+                            <span class="align-middle h6">
                                 START RECORDING
                             </span>
                         </a>
@@ -183,7 +180,7 @@
                         <button type="button" id="start-record" class="btn btn-primary shadow-lg w-100 rounded mt-4 p-3"
                             id="start-record">
                             <i class="material-icons align-middle">play_circle_outline</i>
-                            <span class="align-middle">
+                            <span class="align-middle h6">
                                 START RECORDING
                             </span>
                         </button>
