--- a/views/record.ejs
+++ b/views/record.ejs
@@ -26,53 +26,47 @@
                 </div>
             </div>
             <div class="row mt-5">
-                <div class="col-sm-8 offset-sm-2">
+                <div class="col-8 offset-2">
                     <div class="progress mt-1">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width: 0.5%"></div>
                     </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-2">
                     <span class="" id="currentSentenceLbl"></span>
                     <span class="">/</span>
                     <span class="" id="totalSentencesLbl"></span>
                 </div>
             </div>
             <div class="row justify-content-center ">
-                <div class="col-sm-8 text-muted" id="get-started">
+                <div class="col-8 text-muted" id="get-started">
                     Let's get started!
                 </div>
             </div>
             <div class="row justify-content-center mt-5">
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <button type="button" class=" btn btn-primary shadow-lg w-100 rounded mt-4 p-3"
+                <div class="col-lg-2 col-md-4 col-6">
+                    <button type="button" class="btn btn-primary shadow-lg w-100 rounded mt-4 p-3"
                         id="startRecord">
-                        <i class="material-icons align-middle mr-2">record_voice_over</i>
-                        <span class="align-middle">
                             START RECORDING
-                        </span>
                     </button>
                 </div>
             </div>
             <div class="row justify-content-center my-5">
-                <div class="col-md-1 ">
-                    <div id="recording-sign" class="recorder-container d-none">
+                <div class="col-md-1 col-2 my-auto">
+                    <div id="recording-sign" class="recorder-container ml-auto align-middle d-none">
                         <div class="outer"></div>
                         <div class="outer-2"></div>
                         <div class="icon-microphone"> <i class="material-icons md-48">mic</i></div>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-8 text-center">
+                <div class="col-lg-5 col-8 text-center">
                     <canvas id="visualizer"></canvas>
                 </div>
             </div>
             <div class="row justify-content-center mt-5">
-                <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="col-lg-2 col-md-4 col-6">
                     <button type="button" id="stopRecord" class="d-none btn btn-primary shadow-lg w-100 rounded mt-4 p-3">
-                        <i class="material-icons align-middle mr-2">voice_over_off</i>
-                        <span class="align-middle">
                             STOP RECORDING
-                        </span>
                     </button>
                 </div>
             </div>
